--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -7061,6 +7061,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Cho2014a,
+  author    = {Cho, K. and Van, M. B. and Gulcehre, C. and Bahdanau, D. and Bougares, F. and Schwenk, H. and Bengio, Y.},
+  title     = {Learning phrase representations using rnn encoder-decoder for statistical machine translations},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2014},
+  pages     = {1724-1734},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://aclanthology.org/D14-1179.pdf},
+}
+
 @Article{Cho2016,
   author    = {Cho, I. and Dou, W. and Wang, D. X. and Sauda, E. and Ribarsky, W.},
   title     = {VAiRoma: A Visual Analytics System for Making Sense of Places, Times, and Events in Roman History},
@@ -7204,6 +7215,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/3078971.3079031},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Chu2020,
+  author    = {Chu, J. and Wang, Y. and Liu, X. and Liu, Y.},
+  title     = {Social network community analysis based large-scale group decision making approach with incomplete fuzzy preference relations},
+  journal   = {Information Fusion},
+  year      = {2020},
+  volume    = {60},
+  pages     = {98-120},
+  doi       = {10.1016/j.inffus.2020.02.005},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{Chua2009,
@@ -10574,6 +10597,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://arxiv.org/abs/1506.00711},
 }
 
+@Article{Elharrouss2020,
+  author    = {Elharrouss, Omar and Almaadeed, Noor and Al-Maadeed, Somaya and Bouridane, Ahmed and Beghdadi, Azeddine},
+  title     = {A combined multiple action recognition and summarization for surveillance video sequences},
+  journal   = {Applied Intelligence},
+  year      = {2020},
+  volume    = {51},
+  number    = {2},
+  pages     = {690-712},
+  doi       = {10.1007/s10489-020-01823-z},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Eliashberg1997,
   author    = {Eliashberg, J. and Shugan, S. M.},
   title     = {Film Critics: Influencers or Predictors?},
@@ -13285,6 +13321,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.13},
 }
 
+@Article{Gil2018,
+  author    = {Gil, M. A. and Hein, A. M. and Spiegel, O. and Baskett, M. L. and Sih, A.},
+  title     = {Social Information Links Individual Behavior to Population and Community Dynamics},
+  journal   = {Trends in Ecology \& Evolution},
+  year      = {2018},
+  volume    = {33},
+  number    = {7},
+  pages     = {535-548},
+  doi       = {10.1016/j.tree.2018.04.010},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Gildea2002,
   author    = {Gildea, D. and Jurafsky, D.},
   title     = {Automatic Labeling of Semantic Roles},
@@ -13532,6 +13581,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Irish_and_Norse_Traditions_about_the_Bat.html?id=paNJAAAAMAAJ&redir_esc=y},
+}
+
+@InProceedings{Goel2019,
+  author    = {Goel, A. and Ma, K. T. and Tan, C.},
+  title     = {An End-To-End Network for Generating Social Relationship Graphs},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2019},
+  pages     = {11186-11195},
+  doi       = {10.1109/cvpr.2019.01144},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{Goh2012,
@@ -14989,6 +15049,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.05.01},
 }
 
+@InProceedings{Hara2018,
+  author    = {Hara, K. and Kataoka, H. and Satoh, Y.},
+  title     = {Can Spatiotemporal 3D {CNNs} Retrace the History of 2D {CNNs} and {ImageNet}?},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2018},
+  pages     = {6546-6555},
+  doi       = {10.1109/cvpr.2018.00685},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @InProceedings{Harabagiu2005,
   author    = {Harabagiu, S. and Bejan, C. A. and Morarescu, P.},
   title     = {Shallow semantics for relation extraction},
@@ -15090,6 +15161,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/0165-4896(80)90010-4},
   owner     = {Vincent},
   timestamp = {2017.04.09},
+}
+
+@Article{Harary1985,
+  author    = {Harary, F.},
+  title     = {The love-hate structure of Dangerous Corner},
+  journal   = {Semiotica},
+  year      = {1985},
+  volume    = {54},
+  number    = {3-4},
+  doi       = {10.1515/semi.1985.54.3-4.387},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Book{Hare1996,
@@ -16679,6 +16762,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=1TVaAAAAMAAJ},
 }
 
+@Article{Hunter2014,
+  author    = {Hunter, S.},
+  title     = {A Novel Method of Network Text Analysis},
+  journal   = {Open Journal of Modern Linguistics},
+  year      = {2014},
+  volume    = {04},
+  number    = {02},
+  pages     = {350-366},
+  doi       = {10.4236/ojml.2014.42028},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @Article{Hur2016,
   author    = {Hur, M. and Kang, P. and Cho, S.},
   title     = {Box-office forecasting based on sentiments of movie reviews and Independent subspace method},
@@ -17147,6 +17243,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.05.14},
   url       = {https://users.cs.fiu.edu/~markaf/doc/w20.jahan.2019.procwnu_preprint.pdf},
+}
+
+@InProceedings{Jahan2020,
+  author    = {Jahan, L. and Mittal, R. and Yarlott, W. V. and Finlayson, M.},
+  title     = {A Straightforward Approach to Narratologically Grounded Character Identification},
+  booktitle = {28th International Conference on Computational Linguistics},
+  year      = {2020},
+  pages     = {6089-6100},
+  publisher = {International Committee on Computational Linguistics},
+  doi       = {10.18653/v1/2020.coling-main.536},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Article{Jahn1996,
@@ -18093,6 +18201,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/41299374},
 }
 
+@Article{Kalita2017,
+  author    = {Kalita, S. and Karmakar, A. and Hazarika, S. M.},
+  title     = {Efficient extraction of spatial relations for extended objects vis-à-vis human activity recognition in video},
+  journal   = {Applied Intelligence},
+  year      = {2017},
+  volume    = {48},
+  pages     = {204-219},
+  doi       = {10.1007/s10489-017-0970-8},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Kalmijn1998,
   author    = {Kalmijn, M.},
   title     = {Intermarriage and Homogamy: Causes, Patterns, Trends},
@@ -18139,6 +18259,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi          = {10.7910/DVN/T4HBA3},
   owner        = {Vincent},
   timestamp    = {2021.08.26},
+}
+
+@InProceedings{Kampffmeyer2019,
+  author    = {Kampffmeyer, M. and Chen, Y. and Liang, X. and Wang, H. and Zhang, Y. and Xing, E. P.},
+  title     = {Rethinking Knowledge Graph Propagation for Zero-Shot Learning},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2019},
+  pages     = {11487-11496},
+  doi       = {10.1109/cvpr.2019.01175},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Kanungo2002,
@@ -19837,6 +19968,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://www.lhn.uni-hamburg.de/},
+}
+
+@InProceedings{Kukleva2020,
+  author    = {Kukleva, A. and Tapaswi, M. and Laptev, I.},
+  title     = {Learning Interactions and Relationships Between Movie Characters},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  pages     = {9846-9855},
+  doi       = {10.1109/cvpr42600.2020.00987},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Kulakowski2005,
@@ -21815,6 +21957,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Li2017d,
+  author    = {Li, J. and Wong, Y. and Zhao, Q. and Kankanhalli, M. S.},
+  title     = {Dual-Glance Model for Deciphering Social Relationships},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2017},
+  pages     = {2650-2659},
+  doi       = {10.1109/iccv.2017.289},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Li2017p,
   author    = {Li, C. and Liu, X. and Wong, T.-T.},
   title     = {Deep extraction of manga structural lines},
@@ -21907,6 +22060,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1609/aaai.v33i01.3301996},
   owner     = {Vincent},
   timestamp = {2020.02.04},
+}
+
+@InProceedings{Li2020,
+  author    = {Li, W. and Duan, Y. and Lu, J. and Feng, J. and Zhou, J.},
+  title     = {Graph-Based Social Relation Reasoning},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2020},
+  volume    = {12360},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {18-34},
+  doi       = {10.1007/978-3-030-58555-6_2},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{Liang2009a,
@@ -22169,6 +22335,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@InProceedings{Lin2020,
+  author    = {Lin, X. and Ding, C. and Zeng, J. and Tao, D.},
+  title     = {{GPS}-Net: Graph Property Sensing Network for Scene Graph Generation},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  pages     = {3746-3753},
+  doi       = {10.1109/cvpr42600.2020.00380},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Electronic{Lind2012,
   author       = {Lind, B.},
   month        = {04},
@@ -22200,6 +22377,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://books.google.fr/books/about/Historical_Drama.html?id=x4YOMQAACAAJ},
+}
+
+@Article{Lingam2019,
+  author    = {Lingam, G. and Rout, R. R. and Somayajulu, D. V. L. N.},
+  title     = {Adaptive deep Q-learning model for detecting social bots and influential users in online social networks},
+  journal   = {Applied Intelligence},
+  year      = {2019},
+  volume    = {49},
+  number    = {11},
+  pages     = {3947-3964},
+  doi       = {10.1007/s10489-019-01488-3},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Liou2000,
@@ -22432,6 +22622,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.05.14},
   url       = {https://arxiv.org/abs/1907.11692},
+}
+
+@InProceedings{Liu2019b,
+  author    = {Liu, X. and Liu, W. and Zhang, M. and Chen, J. and Gao, L. and Yan, C. and Mei, T.},
+  title     = {Social Relation Recognition From Videos via Multi-Scale Spatial-Temporal Reasoning},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2019},
+  pages     = {3566-3574},
+  doi       = {10.1109/cvpr.2019.00368},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Liu2020,
@@ -24803,6 +25004,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@InProceedings{Mihalcea2005,
+  author    = {Mihalcea, R.},
+  title     = {Unsupervised large-vocabulary word sense disambiguation with graph-based algorithms for sequence data labeling},
+  booktitle = {Human Language Technology Conference and Conference on Empirical Methods in Natural Language Processing},
+  year      = {2005},
+  pages     = {411-418},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://aclanthology.org/H05-1052/},
+}
+
 @Book{Mihalcea2011,
   title     = {Graph-based Natural Language Processing and Information Retrieval},
   publisher = {Cambridge University Press},
@@ -25620,6 +25832,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://litlab.stanford.edu/LiteraryLabPamphlet15.pdf},
+}
+
+@Article{Moretti2020,
+  author    = {Moretti, F.},
+  title     = {Simulating Dramatic Networks: Morphology, History, Literary Study},
+  journal   = {Journal of World Literature},
+  year      = {2020},
+  volume    = {6},
+  number    = {1},
+  pages     = {24-44},
+  doi       = {10.1163/24056480-20201001},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Article{Morgan1962,
@@ -26494,6 +26719,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.36.1.48},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Navigli2009,
+  author    = {Navigli, R.},
+  title     = {Word sense disambiguation},
+  journal   = {ACM Computing Surveys},
+  year      = {2009},
+  volume    = {41},
+  number    = {2},
+  pages     = {10},
+  doi       = {10.1145/1459352.1459355},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @InCollection{Neagu2021,
@@ -28287,6 +28525,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Partlan2019,
+  author    = {Partlan, N. and Carstensdottir, E. and Kleinman, E. and Snodgrass, S. and Harteveld, C. and Smith, G. and Matuk, C. and Sutherland, S. C. and El-Nasr, M. S.},
+  title     = {Evaluation of an automatically-constructed graph-based representation for interactive narrative},
+  booktitle = {14th International Conference on the Foundations of Digital Games},
+  year      = {2019},
+  pages     = {1-9},
+  doi       = {10.1145/3337722.3341858},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @Book{Partridge1971,
   title     = {A Critical Medley: Essays, Studies, and Notes in English, French, and Comparative Literature},
   publisher = {Books for Libraries Press},
@@ -28612,6 +28861,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2006.122},
   owner     = {Vincent},
   timestamp = {2021.06.21},
+}
+
+@Article{Perez-Hernandez2020,
+  author    = {Pérez-Hernández, F. and Tabik, S. and Lamas, A. and Olmos, R. and Fujita, H. and Herrera, F.},
+  title     = {Object Detection Binary Classifiers methodology based on deep learning to identify small objects handled similarly: Application in video surveillance},
+  journal   = {Knowledge-Based Systems},
+  year      = {2020},
+  volume    = {194},
+  pages     = {105590},
+  doi       = {10.1016/j.knosys.2020.105590},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{PerezYPerez2001,
@@ -30959,6 +31220,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1572306.1572309},
 }
 
+@Article{Roberts2008a,
+  author    = {Roberts, D. L. and Isbell, C. L.},
+  title     = {A survey and qualitative analysis of recent advances in drama management},
+  journal   = {International Transactions on Systems Science and Applications},
+  year      = {2008},
+  volume    = {4},
+  number    = {2},
+  pages     = {61-75},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.696.7314&rep=rep1&type=pdf},
+}
+
 @Article{Roberts-Smith2013,
   author    = {Roberts-Smith, J. and DeSouza-Coelho, S. and Dobson, T. M. and Gabriele, S. and Rodriguez-Arenas, O. and Ruecker, S. and Sinclair, S. and Akong, A. and Bouchard, M. and Hong, M. and Jakacki, D. and Lam, D. and Kovacs, A. and Northam, L. and So, D.},
   title     = {Visualizing Theatrical Text: From Watching the Script to the Simulated Environment for Theatre (SET)},
@@ -30981,6 +31255,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://varianceexplained.org/r/love-actually-network/},
   owner        = {Vincent},
   timestamp    = {2019.04.26},
+}
+
+@Article{Robinson2018,
+  author    = {Robinson, J. P. and Shao, M. and Wu, Y. and Liu, H. and Gillis, T. and Fu, Y.},
+  title     = {Visual Kinship Recognition of Families in the Wild},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2018},
+  volume    = {40},
+  number    = {11},
+  pages     = {2624-2637},
+  doi       = {10.1109/tpami.2018.2826549},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{Robnik-Sikonja1997,
@@ -31757,6 +32044,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1086/669854},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Rzepka2017,
+  author    = {Rzepka, A. and Williams, P. and Royston, J.},
+  title     = {The Social Network of Early English Drama: A Digital Humanities Lesson Plan},
+  journal   = {Emerging Learning Design Journal},
+  year      = {2017},
+  volume    = {5},
+  number    = {1},
+  pages     = {4},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://digitalcommons.montclair.edu/eldj/vol5/iss1/4/},
+}
+
+@Book{Saaty1998,
+  title     = {Fundamentals of Decision Making and Priority Theory},
+  publisher = {RWS Publications},
+  year      = {1998},
+  author    = {Saaty, T. L.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://books.google.fr/books/about/Fundamentals_of_Decision_Making_and_Prio.html?id=wct10TlbbIUC},
 }
 
 @Article{Sabidussi1966,
@@ -32828,6 +33138,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1507.04808},
 }
 
+@Article{Serino2017,
+  author    = {Serino, M. and D'Ambrosio, D. and Ragozini, G.},
+  title     = {Bridging social network analysis and field theory through multidimensional data analysis: The case of the theatrical field},
+  journal   = {Poetics},
+  year      = {2017},
+  volume    = {62},
+  pages     = {66-80},
+  doi       = {10.1016/j.poetic.2016.12.002},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @InCollection{Serrat2017,
   author    = {Serrat, O.},
   title     = {Social Network Analysis},
@@ -33046,6 +33368,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/pacificvis.2011.5742388},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@InProceedings{Shi2020,
+  author    = {Shi, W. and Rajkumar, R.},
+  title     = {Point-{GNN}: Graph Neural Network for 3D Object Detection in a Point Cloud},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  pages     = {1711-1719},
+  doi       = {10.1109/cvpr42600.2020.00178},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Shimbel1953,
@@ -34782,6 +35115,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.26},
 }
 
+@Article{Sun2020,
+  author    = {Sun, X. and Gu, J. and Sun, H.},
+  title     = {Research progress of zero-shot learning},
+  journal   = {Applied Intelligence},
+  year      = {2020},
+  volume    = {51},
+  number    = {6},
+  pages     = {3600-3614},
+  doi       = {10.1007/s10489-020-02075-7},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Sundararaman2005,
   author    = {Sundararaman, B. and Buy, U. and Kshemkalyani, A. D.},
   title     = {Clock synchronization for wireless sensor networks: a survey},
@@ -35130,6 +35476,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icassp.2016.7472809},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@InProceedings{Tang2020,
+  author    = {Tang, K. and Niu, Y. and Huang, J. and Shi, J. and Zhang, H.},
+  title     = {Unbiased Scene Graph Generation From Biased Training},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  pages     = {3716-3725},
+  doi       = {10.1109/cvpr42600.2020.00377},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Tangherlini2013,
@@ -35551,6 +35908,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@InProceedings{Thomas2016a,
+  author    = {Thomas, M. and Peebles, C.},
+  title     = {A Graph-Theoretic Approach to the Analysis of Contra Dances},
+  booktitle = {Bridges: Mathematics, Music, Art, Architecture, Education, Culture},
+  year      = {2016},
+  pages     = {285-292},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://archive.bridgesmathart.org/2016/bridges2016-285.html},
+}
+
 @InCollection{Thomas2020,
   author    = {Thomas, L.},
   title     = {Modeling Long Novels: Network Analysis and A Brief History of Seven Killings},
@@ -35691,6 +36059,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11280-018-0548-3},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Tian2021,
+  author    = {Tian, P. and Mo, H. and Jiang, L.},
+  title     = {Scene graph generation by multi-level semantic tasks},
+  journal   = {Applied Intelligence},
+  year      = {2021},
+  doi       = {10.1007/s10489-020-02115-2},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{TianLan2012,
@@ -35927,6 +36305,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {https://www.cs.nmt.edu/~rbasnet/research/ClusteringSimilarityAndItsApplications.pdf},
+}
+
+@InProceedings{Toshniwal2020,
+  author    = {Toshniwal, S. and Wiseman, S. and Ettinger, A. and Livescu, K. and Gimpel, K.},
+  title     = {Learning to Ignore: Long Document Coreference with Bounded Memory Neural Networks},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {8519-8526},
+  doi       = {10.18653/v1/2020.emnlp-main.685},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Article{Touhey1972,
@@ -37311,6 +37700,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Wallner2013,
+  author    = {Wallner, G. and Kriglstein, S.},
+  title     = {Visualization-based analysis of gameplay data {\textendash} A review of literature},
+  journal   = {Entertainment Computing},
+  year      = {2013},
+  volume    = {4},
+  number    = {3},
+  pages     = {143-155},
+  doi       = {10.1016/j.entcom.2013.02.002},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @Article{Walonen2018,
   author    = {Walonen, M. K.},
   title     = {Violence, Diasporic Transnationalism, and Neo-imperialism in A Brief History of Seven Killings},
@@ -37538,6 +37940,54 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/access.2018.2849680},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@InProceedings{Wang2018a,
+  author    = {Wang, Z. and Chen, T. and Ren, J. and Yu, W. and Cheng, H. and Lin, L.},
+  title     = {Deep Reasoning with Knowledge Graph for Social Relationship Understanding},
+  booktitle = {27th International Joint Conference on Artificial Intelligence},
+  year      = {2018},
+  pages     = {1021-1028},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://www.ijcai.org/proceedings/2018/0142.pdf},
+}
+
+@Article{Wang2020a,
+  author    = {Wang, M. and Du, X. and Shu, X. and Wang, X. and Tang, J.},
+  title     = {Deep supervised feature selection for social relationship recognition},
+  journal   = {Pattern Recognition Letters},
+  year      = {2020},
+  volume    = {138},
+  pages     = {410-416},
+  doi       = {10.1016/j.patrec.2020.08.005},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
+@Article{Wang2020b,
+  author    = {Wang, M. and Shu, X. and Feng, J. and Wang, X. and Tang, J.},
+  title     = {Deep multi-person kinship matching and recognition for family photos},
+  journal   = {Pattern Recognition},
+  year      = {2020},
+  volume    = {105},
+  pages     = {107342},
+  doi       = {10.1016/j.patcog.2020.107342},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
+@Article{Wang2020t,
+  author    = {Wang, C. and Wang, C. and Wang, Z. and Ye, X. and Yu, P. S.},
+  title     = {Edge2vec: Edge-based Social Network Embedding},
+  journal   = {ACM Transactions on Knowledge Discovery from Data},
+  year      = {2020},
+  volume    = {14},
+  number    = {4},
+  pages     = {45},
+  doi       = {10.1145/3391298},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Wanner2011,
@@ -38781,6 +39231,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@InProceedings{Xie2020,
+  author    = {Xie, G.-S. and Liu, L. and Zhu, F. and Zhao, F. and Zhang, Z. and Yao, Y. and Qin, J. and Shao, L.},
+  title     = {Region Graph Embedding Network for Zero-Shot Learning},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2020},
+  volume    = {12349},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {562-580},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-58548-8_33},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{XiweiTang2014,
   author    = {Tang, X. and Wang, J. and Zhong, J. and Pan, Y.},
   title     = {Predicting Essential Proteins Based on Weighted Degree Centrality},
@@ -39099,6 +39563,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://proceedings.neurips.cc/paper/2019/hash/dc6a7e655d7e5840e66733e9ee67cc69-Abstract.html},
+}
+
+@InProceedings{Yang2020,
+  author    = {Yang, L. and Li, L. and Zhang, Z. and Zhou, X. and Zhou, E. and Liu, Y.},
+  title     = {{DPGN}: Distribution Propagation Graph Network for Few-Shot Learning},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  pages     = {13390-13399},
+  doi       = {10.1109/cvpr42600.2020.01340},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Yao2019,
@@ -39893,6 +40368,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@Article{Zhang2017,
+  author    = {Zhang, Z. and Luo, P. and Loy, C. C. and Tang, X.},
+  title     = {From Facial Expression Recognition to Interpersonal Relation Prediction},
+  journal   = {International Journal of Computer Vision},
+  year      = {2017},
+  volume    = {126},
+  number    = {5},
+  pages     = {550-569},
+  doi       = {10.1007/s11263-017-1055-1},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Zhang2017l,
   author    = {Zhang, X. and Wang, C. and Su, Y. and Pan, L. and Zhang, H.-F.},
   title     = {A Fast Overlapping Community Detection Algorithm Based on Weak-Cliques for Large-scale Networks},
@@ -39938,6 +40426,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3289600.3291014},
   owner     = {Vincent},
   timestamp = {2020.02.04},
+}
+
+@Article{Zhang2020,
+  author    = {Zhang, X.-Y. and Huang, Y.-P. and Mi, Y. and Pei, Y.-T. and Zou, Q. and Wang, S.},
+  title     = {Video sketch: A middle-level representation for action recognition},
+  journal   = {Applied Intelligence},
+  year      = {2020},
+  volume    = {51},
+  number    = {4},
+  pages     = {2589-2608},
+  doi       = {10.1007/s10489-020-01905-y},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Zhang2021o,
