--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1806,6 +1806,19 @@
   url       = {https://he.kendallhunt.com/product/becoming-interdisciplinary-introduction-interdisciplinary-studies},
 }
 
+@Article{Auster1980,
+  author    = {Auster, C. J.},
+  title     = {Balance Theory and other Extra-Balance Properties: An Application to Fairy Tales},
+  journal   = {Psychological Reports},
+  year      = {1980},
+  volume    = {47},
+  number    = {1},
+  pages     = {183-188},
+  doi       = {10.2466/pr0.1980.47.1.183},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Article{Austin1980,
   author    = {Austin, B. A.},
   title     = {The Influence of the Mpaa's Film-Rating System on Motion Picture Attendance: A Pilot Study},
@@ -15094,6 +15107,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.ynharari.com/fr/book/dapres-sapiens/},
 }
 
+@Article{Harary1953,
+  author    = {Harary, F.},
+  title     = {On the notion of balance of a signed graph},
+  journal   = {Michigan Mathematical Journal},
+  year      = {1953},
+  volume    = {2},
+  number    = {2},
+  pages     = {143-146},
+  doi       = {10.1307/mmj/1028989917},
+  owner     = {Vincent},
+  timestamp = {2016.10.31},
+}
+
 @TechReport{Harary1953a,
   author      = {Harary, F. and Norman, R. Z.},
   title       = {Graph theory as a mathematical model in social science},
@@ -15127,6 +15153,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.researchgate.net/publication/216638219_Structural_Models_An_Introduction_to_the_Theory_of_Directed_GraphsWiley_New_York},
 }
 
+@Article{Harary1966,
+  author    = {Harary, F. and Palmer, E.},
+  title     = {Enumeration of mixed graphs},
+  journal   = {Proceedings of the American Mathematical Society},
+  year      = {1966},
+  volume    = {17},
+  pages     = {682-687},
+  doi       = {10.1090/S0002-9939-1966-0191845-4},
+  owner     = {Vincent},
+  timestamp = {2017.06.26},
+}
+
 @Article{Harary1966a,
   author    = {Harary, F.},
   title     = {Structural study of "A Severed Head"},
@@ -15150,6 +15188,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.dtic.mil/dtic/tr/fulltext/u2/705364.pdf},
 }
 
+@Article{Harary1975,
+  author    = {Harary, F.},
+  title     = {Le graphe de ``La nuit des rois''},
+  journal   = {Mathématiques et Sciences humaines},
+  year      = {1975},
+  volume    = {51},
+  pages     = {77-80},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {http://www.numdam.org/item/MSH_1975__51__77_0/},
+}
+
 @Article{Harary1980,
   author    = {Harary, Frank and Kabell, Jerald A.},
   title     = {A simple algorithm to detect balance in signed graphs},
@@ -15161,6 +15211,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/0165-4896(80)90010-4},
   owner     = {Vincent},
   timestamp = {2017.04.09},
+}
+
+@Article{Harary1982,
+  author    = {Harary, F.},
+  title     = {Oedipus Loves his Mother},
+  journal   = {Behavioral Science},
+  year      = {1982},
+  volume    = {27},
+  number    = {2},
+  pages     = {162-163},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://dokumen.tips/documents/oedipus-loves-his-mother.html},
 }
 
 @Article{Harary1985,
@@ -24385,6 +24448,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/11823285_121},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Mayer1972,
+  author    = {Mayer, J.},
+  title     = {Un graphe pour une comédie: Marivaux, `Les acteurs de bonne foi'},
+  journal   = {Informatique et Sciences Humaines},
+  year      = {1972},
+  volume    = {14},
+  pages     = {5-10},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://www.worldcat.org/title/informatique-et-sciences-humaines-ish/oclc/231042203},
+}
+
+@Article{Mayer1973,
+  author    = {Mayer, J.},
+  title     = {Les conflits de races dans ``l'Anneau du Nibelung'' de R. Wagner},
+  journal   = {Romantisme},
+  year      = {1973},
+  volume    = {6},
+  pages     = {99-110},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://www.persee.fr/doc/roman_0048-8593_1973_num_3_6_4957},
 }
 
 @Article{Mazanec2018,
@@ -34452,6 +34539,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.84.046102},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@Article{Stanton1967,
+  author    = {Stanton, R. G.},
+  title     = {``A Midsummer Night's Dream'' - A Structural Study},
+  journal   = {Psychological Reports},
+  year      = {1967},
+  volume    = {20},
+  number    = {2},
+  pages     = {657-658},
+  doi       = {10.2466/pr0.1967.20.2.657},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Book{Stark2007,
