--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -14801,6 +14801,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.osti.gov/biblio/960616},
 }
 
+@Article{Hage1979,
+  author    = {Hage, P.},
+  title     = {A Viennese autochtonous hero: Structural duality in Freud's origin myths},
+  journal   = {Social Science Information},
+  year      = {1979},
+  volume    = {18},
+  number    = {2},
+  pages     = {307-324},
+  doi       = {10.1177/053901847901800206},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+}
+
 @Book{Hage1983,
   title     = {Structural Models in Anthropology},
   publisher = {Cambridge University Press},
@@ -21592,6 +21605,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://muse.jhu.edu/article/602258/pdf},
+}
+
+@InCollection{Levi-Strauss1963,
+  author    = {Levi-Strauss, C.},
+  title     = {The structural study of myth},
+  booktitle = {Structural anthropology},
+  publisher = {Basic Books},
+  year      = {1963},
+  pages     = {206-23},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://www.worldcat.org/title/structural-anthropology/oclc/341800},
 }
 
 @InProceedings{Levy2003,
