--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3428,6 +3428,16 @@
   url       = {http://www.aaai.org/Papers/Symposia/Spring/2004/SS-04-07/SS04-07-005.pdf},
 }
 
+@Book{Bettelheim1976,
+  title     = {The Uses of Enchantment: The Meaning and Importance of Fairy Tales},
+  publisher = {Knopf},
+  year      = {1976},
+  author    = {Bettelheim, B.},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://books.google.fr/books/about/The_Uses_of_Enchantment.html?id=qTbBAYVv_KkC},
+}
+
 @Article{Beveridge2016,
   author    = {Beveridge, A. and Shan, J.},
   title     = {Network of Thrones},
@@ -15653,6 +15663,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books/about/Hegel_on_Tragedy.html?id=HAUbAQAAIAAJ},
 }
 
+@Article{Heider1944,
+  author    = {Heider, F.},
+  title     = {Social perception and phenomenal causality},
+  journal   = {Psychological Review},
+  year      = {1944},
+  volume    = {51},
+  number    = {6},
+  pages     = {358-374},
+  doi       = {10.1037/h0055425},
+  owner     = {Vincent},
+  timestamp = {2017.04.25},
+}
+
 @Article{Heider1946,
   author    = {Heider, F.},
   title     = {Attitudes and cognitive organization},
@@ -22244,6 +22267,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/asi.20591},
   owner     = {Vincent},
   timestamp = {2010.10.11},
+}
+
+@Article{Lieberman1969,
+  author    = {Lieberman, A. B.},
+  title     = {The Well-Made Play and the Theatre of the Absurd: A Study in Attitude Change},
+  journal   = {Sociological Inquiry},
+  year      = {1969},
+  volume    = {39},
+  number    = {1},
+  pages     = {85-91},
+  doi       = {10.1111/j.1475-682x.1969.tb00943.x},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @Article{Lienhart1997,
@@ -29549,6 +29585,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Book{Ponsot1958,
+  title     = {The fairy tale book},
+  publisher = {Golden Press},
+  year      = {1958},
+  author    = {Ponsot, M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
+  url       = {https://www.goodreads.com/book/show/37926949-the-fairy-tale-book},
+}
+
 @InProceedings{Pope2016,
   author    = {Pope, F. and Shirvani, R. A. and Rwebangira, Mugizi R. and Chouikha, M. and Taylor, A. and Alarcon Ramirez, A. and Torfi, A.},
   title     = {Automatic Detection of Small Groups of Persons, Influential Members, Relations and Hierarchy in Written Conversations Using Fuzzy Logic},
@@ -35813,6 +35859,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0261927x09351676},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{Taylor1970,
+  title     = {Balance in Small Groups},
+  publisher = {Van Nostrand Reinhold},
+  year      = {1970},
+  author    = {Taylor, H. F.},
+  owner     = {Vincent},
+  timestamp = {2016.10.31},
+  url       = {https://books.google.fr/books/about/Balance_in_small_groups.html?id=n6NkAAAAIAAJ&redir_esc=y},
 }
 
 @InCollection{Taylor1993,
